First working version.

--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,9 @@
 name    = Dist-Zilla-Plugin-LocalHTML
 author  = Vadim Belman <vrurg@cpan.org>
-license = BSD
+license = Perl_5
 copyright_holder = Vadim Belman
 copyright_year   = 2017
 abstract = Generate HTML documentation suitable for local browsing
-
-version = 0.00.01
-
 release_status = unstable
 main_module = lib/Dist/Zilla/Plugin/LocalHTML.pm
 
@@ -15,25 +12,32 @@ main_module = lib/Dist/Zilla/Plugin/LocalHTML.pm
 [ManifestSkip]
 [MetaYAML]
 [MetaJSON]
-[Readme]
+[License]
+[Pod2Readme]
 [ExecDir]
+[RewriteVersion]
 [MakeMaker]
 [Manifest]
 [PodWeaver]
 [TestRelease]
 [AutoPrereqs]
 [PodSyntaxTests]
-[GitFmtChanges]
-tag_regexp=^release-
-file_name=Changelog
-log_format=%aD %an%n%s
+[ChangelogFromGit]
+tag_regexp  = ^release-(?:v)?((?:\d+)(?:\.\d+)+)$
+file_name   = Changelog
+wrap_column = 78
+exclude_message=^(?i:minor\b)
 [@Git]
 tag_format=release-%v
 signed=1
+[CheckVersionIncrement]
 [ConfirmRelease]
+[FakeRelease]
 ;[UploadToCPAN]
+[BumpVersionAfterRelease]
 
 [Prereqs]
+MooseX::NonMoose=0
 Pod::Find=0
 Moose=0
 
