--- a/dist.ini
+++ b/dist.ini
@@ -32,8 +32,7 @@ tag_format=release-%v
 signed=1
 [CheckVersionIncrement]
 [ConfirmRelease]
-[FakeRelease]
-;[UploadToCPAN]
+[UploadToCPAN]
 [BumpVersionAfterRelease]
 
 [Prereqs]
