--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Vadim Belman
 copyright_year   = 2017
 abstract = Generate HTML documentation suitable for local browsing
-release_status = unstable
+release_status = stable
 main_module = lib/Dist/Zilla/Plugin/LocalHTML.pm
 
 [Git::GatherDir]
