Determine link type by checking if it maps into project files.
Override default search.cpan.org with metacpan.org

--- a/t/DZPL-Test-Module-_DUMMY/dist.ini
+++ b/t/DZPL-Test-Module-_DUMMY/dist.ini
@@ -1,4 +1,4 @@
-name    = Test-Module-_DUMMY
+name    = DZPL-Test-Module-_DUMMY
 author  = Vadim Belman <vrurg@cpan.org>
 license = BSD
 copyright_holder = Vadim Belman
@@ -9,6 +9,6 @@ version = 0.001
 
 [@Basic]
 [LocalHTML]
-local_prefix=DZPL\b
+local_prefix=Test::Module\b
 dir = html
 
