Added support for META 'provides' and 'repository'

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,8 @@ main_module = lib/Dist/Zilla/Plugin/LocalHTML.pm
 [Pod2Readme]
 [ExecDir]
 [RewriteVersion]
+[MetaProvides::Package]
+[GitHub::Meta]
 [MakeMaker]
 [Manifest]
 [PodWeaver]
