--- a/dist.ini
+++ b/dist.ini
@@ -34,8 +34,8 @@ tag_format=release-%v
 signed=1
 [CheckVersionIncrement]
 [ConfirmRelease]
-[FakeRelease]
-;[UploadToCPAN]
+;[FakeRelease]
+[UploadToCPAN]
 [BumpVersionAfterRelease]
 
 [Prereqs]
