Added pod tests and fixed pod errors

--- a/dist.ini
+++ b/dist.ini
@@ -18,12 +18,14 @@ main_module = lib/Dist/Zilla/Plugin/LocalHTML.pm
 [RewriteVersion]
 [MetaProvides::Package]
 [GitHub::Meta]
+[PodWeaver]
+[PodSyntaxTests]
+[PodCoverageTests]
+[ExtraTests]
 [MakeMaker]
 [Manifest]
-[PodWeaver]
 [TestRelease]
 [AutoPrereqs]
-[PodSyntaxTests]
 [ChangelogFromGit]
 tag_regexp  = ^release-(?:v)?((?:\d+)(?:\.\d+)+)$
 file_name   = Changelog
