Minor: roll back to unstable status
Also removed UploadToCPAN plugin completely. master branch is not a
release branch!

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Vadim Belman
 copyright_year   = 2017
 abstract = Generate HTML documentation suitable for local browsing
-release_status = stable
+release_status = unstable
 main_module = lib/Dist/Zilla/Plugin/LocalHTML.pm
 
 [Git::GatherDir]
@@ -36,8 +36,8 @@ tag_format=release-%v
 signed=1
 [CheckVersionIncrement]
 [ConfirmRelease]
-;[FakeRelease]
-[UploadToCPAN]
+; Never change this on master branch! NEVER!
+[FakeRelease]
 [BumpVersionAfterRelease]
 
 [Prereqs]
